--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
     <!--end of project template-->
     <div class="project">
-       <img src="img/polygogenerator.png" alt="Polygon Generator"/>
-       <h2>Polygon Generator</h2>
-       <p><a href="https://scratch.mit.edu/projects/899092459">scratch.mit.edu/anika.polygongenerator</a></p>
+       <img src="img/polygogenerator.png" alt="Critter-Clean Up Game"/>
+       <h2>Critter-Clean Up Game</h2>
+       <p><a href="https://snap.berkeley.edu/snap/snap.html#present:Username=myorar&ProjectName=Paired%20Programming%20Critter%20Clean%2dUp&editMode&noRun">snap.berkeley.edu/anika.critter-cleanup</a></p>
        <p> In scratch, me and my partner Grace were able to create a polygon generator together. Meant for kids to learn their shapes, this program is able to draw any shape and includes default options such as triangles and even circles. As an extra, we added “buttons” and coded each one to receive the shape’s code when clicked. 
        </p>
       <div class="clear"></div>
