--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
 
    <h2>About Me</h2>
    <img src="img/hehekitty.png" alt="silly kitty" />
-   <p> Hi I’m Anika, a high school student. I took CS to explore a technical side to my otherwise creative abilities and I am enjoying the challenges it presents everyday. In my free time I volunteer, plant trees, advocate, draw, and survive my AP classes. I hope to one day pursue science to find solutions towards a green planet!
+   <p> Hi I’m Anika, a high school student. I took CS to explore a technical side to my otherwise creative abilities and I am enjoying the challenges it presents everyday. In my free time I volunteer, plant trees, advocate, draw, and survive my AP classes. I hope to one day pursue environmental research and find solutions for a greener planet!
 </p>
 </body>
 </html>
