--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
     </div>
     <!--end of project template-->
     <div class="project">
-       <img src="img/polygogenerator.png" alt="Critter-Clean Up Game"/>
-       <h2>Critter-Clean Up Game</h2>
-       <p><a href="https://snap.berkeley.edu/snap/snap.html#present:Username=myorar&ProjectName=Paired%20Programming%20Critter%20Clean%2dUp&editMode&noRun">snap.berkeley.edu/anika.critter-cleanup</a></p>
-       <p> In scratch, me and my partner Grace were able to create a polygon generator together. Meant for kids to learn their shapes, this program is able to draw any shape and includes default options such as triangles and even circles. As an extra, we added “buttons” and coded each one to receive the shape’s code when clicked. 
+       <img src="img/critter clean up screen.png" alt="Critter Clean Up""/>
+       <h2>Critter Clean-Up Game</h2>
+       <p><a href = "https://snap.berkeley.edu/project?username=myorar&projectname=Paired%20Programming%20Critter%20Clean%2dUp">snap.berkeley.edu/anika.crittercleanup</a></p>
+       <p> In a block code program, me and my partner created a game that teaches young children how to recycle and care for the species that are affected by littering. Our main character, Barry the Bear, shares the experiances of wild animals and teaches kids which types of items they see everyday can be recycled. Through a drag-and-drop interface, kids can participate in the activity of recycling and earn points for their efforts!
+         
        </p>
       <div class="clear"></div>
     </div>
