--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
     </div>
     <!--end of project template-->
     <div class="project">
-       <img 
-src="img/critter.png" alt="Critter Clean-Up"/>
+       <img src="img/critter.png" alt="Critter Clean-Up"/>
        <h2>Critter Clean-Up Game</h2>
-       <p><a href = "https://snap.berkeley.edu/project?username=myorar&projectname=Paired%20Programming%20Critter%20Clean%2dUp">snap.berkeley.edu/anika.crittercleanup</a></p>
+       <p><a href="https://snap.berkeley.edu/project?username=myorar&projectname=Paired%20Programming%20Critter%20Clean%2dUp">snap.berkeley.edu/anika.crittercleanup</a></p>
        <p> In a block code program, me and my partner created a game that teaches young children how to recycle and care for the species that are affected by littering. Our main character, Barry the Bear, shares the experiances of wild animals and teaches kids which types of items they see everyday can be recycled. Through a drag-and-drop interface, kids can participate in the activity of recycling and earn points for their efforts!
-         
        </p>
       <div class="clear"></div>
     </div>
