--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@ src="img/game.png" alt="Critter Clean-Up"/>
        </p>
       <div class="clear"></div>
     </div>
+    <div class="project">
+       <img src="img/Pico.jpg" alt="Pico Project"/>
+       <h2>Pico Project</h2>
+       <p><a href="https://docs.google.com/presentation/d/1p9q6ednHVm-IfP0j1hzWJwUdebv62Xvfk38al0d2L-g/edit#slide=id.g1d1df601801_0_54">Pico Manual</a></p>
+       <p> In class, me and my partner coded a light that mimics a stoplight. We used Wowki Simulator and coded a Rasberry Pi Pico to change the lights from red to green to yellow with intervals to seperate. 
+       </p>
   </div>
 </body>
 </html>
