--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@ src="img/game.png" alt="Critter Clean-Up"/>
        </p>
       <div class="clear"></div>
     </div>
+      <div class="project">
+       <img src="img/snapgame.png" alt="AP Create"/>
+       <h2>Carbon Calculator</h2>
+       <p><a href="https://snap.berkeley.edu/project?username=cloudy_y&projectname=Ecotracker">snap.berkeley.edu/anika.carboncalculator</a></p>
+       <p> For my computer science AP Create project I created a calculator that calculates how sustainable the user's weekly mileage is. Using block code in SNAP, the user can input their daily mileage and the program stores the amount so that at the end, the total mileage is revealed and the user is given advice to reduce their carbon footprint. 
+       </p>
+        <div class="clear"></div>
+    </div>
     <div class="project">
        <img src="img/Pico.jpg" alt="Pico Project"/>
        <h2>Pico Project</h2>
